# lexai

./: README.md  package-lock.json  package.json
docs/: tauri-crate-items.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/data/: database.db
src-tauri/src/: lib.rs  main.rs
src-tauri/src/db/: store.rs
src-tauri/src/db-old/: error.rs  mod.rs  models.rs  store.rs
src-tauri/src/document/: base.rs  mod.rs
src-tauri/src/embedder/: fastembed.rs  mod.rs
src-tauri/src/storage/: db.rs  mod.rs
src-tauri/src/storage/agent/: mod.rs  models.rs
src-tauri/src/storage/assistant/: mod.rs  models.rs
src-tauri/src/storage/workflow/: mod.rs  models.rs
src-tauri/src/vectordb/: mod.rs  store.rs
src/components/: MainPanel.vue  SidePanel.vue
